data/derived/sp14/progs/unify/prog2918.ml.out
Characters 77-90:
  | Sine(a) -> sin(eval(e,x,a))
                  ^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
